Fix header on mobile

--- a/assets/sass/partials/mobile/_header.sass
+++ b/assets/sass/partials/mobile/_header.sass
@@ -4,6 +4,15 @@ header
 		border-bottom: 1px dashed var(--border-color)
 		height: 80px
 
+		#logo
+			font-size: 16px
+			line-height: 80px
+			z-index: 2
+		
+			img
+				height: 81px !important
+				width: 81px !important
+
 		#search
 			top: calc((80px / 2) - 25px)
 			width: calc(100vw - 50px)
@@ -12,14 +21,6 @@ header
 				button
 					.search-icon
 						background: var(--background-color)
-
-		#logo
-			font-size: 16px
-			line-height: 80px
-		
-			img
-				height: 81px !important
-				width: 81px !important
 
 	.utility
 		display: none
